; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Kernel.c_SystemToLocal.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Kernel.c_SystemToLocal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SystemToLocal(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %11, label %8

8:                                                ; preds = %2
  %9 = load i32*, i32** %4, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %8, %2
  br label %21

12:                                               ; preds = %8
  %13 = load i32*, i32** %4, align 8
  %14 = call i64 @SystemToUINT64(i32* %13)
  %15 = load i32*, i32** %4, align 8
  %16 = call i64 @GetTimeDiffEx(i32* %15, i32 0)
  %17 = add nsw i64 %14, %16
  store i64 %17, i64* %5, align 8
  %18 = load i32*, i32** %3, align 8
  %19 = load i64, i64* %5, align 8
  %20 = call i32 @UINT64ToSystem(i32* %18, i64 %19)
  br label %21

21:                                               ; preds = %12, %11
  ret void
}

declare dso_local i64 @SystemToUINT64(i32*) #1

declare dso_local i64 @GetTimeDiffEx(i32*, i32) #1

declare dso_local i32 @UINT64ToSystem(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
